<resources>
    <string name="app_name">AndroidKotlinFundamentals</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Android Kotlin fundamentals</string>
    <string name="pathway1_fragment_label">Get started</string>
    <string name="roll_fragment_label">Image resource and compatibility</string>
    <string name="layouts_fragment_label">Constraint layout </string>
    <string name="constraint_fragment_label">Layouts</string>

    <string name="title_fragment_label">Android Trivia</string>
    <string name="game_fragment_label">Game</string>
    <string name="game_over_fragment_label">Game Over</string>
    <string name="game_won_fragment_label">Game Won</string>
    <string name="rule_fragment_label">Rule</string>
    <string name="about_fragment_label">About</string>

    <string name="pathway3_box_one_text">Box One</string>
    <string name="pathway3_box_two_text">Box two</string>
    <string name="pathway3_box_three_text">Box Three</string>
    <string name="pathway3_box_four_text">Box Four</string>
    <string name="pathway3_box_five_text">Box Five</string>

    <string name="how_to_play">How to play:</string>
    <string name="tap_the_boxes_and_buttons">Tap the screen and buttons.</string>
    <string name="button_red">RED</string>
    <string name="button_yellow">YELLOW</string>
    <string name="button_green">GREEN</string>
    <string name="play">Play</string>

</resources>